--- a/index.html
+++ b/index.html
@@ -31,8 +31,19 @@
         <span>A</span>
         <span>Y</span>
     </div>
+  <div class="greetings">
+        <span>A</span>
+        <span>R</span>
+        <span>E</span>
+        <span>E</span>
+        <span>B</span>
+        <span>A</span>
+        <span>😍</span>
+        <span>💝</span>
+    </div>
     <div style="text-align: center;" class="description">
         <span>Wishing you a day filled with love and joy! 🎉🎂</span>
+        <spanTo my forever favorite, Areeb Akhan! 📸 Happy Birthday, love! Six years of capturing beautiful moments together, <br> and you're still the most photogenic part of every memory.<br> Like a perfectly exposed film, you bring light into every dark room of life. <br>May your birthday be as timeless and beautiful as our love story! 🎞️✨</span>
     </div>
      <!-- Button -->
   <div style="position: absolute; top: 75vh; width: 100%; display: flex; justify-content: center;">
