--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
     </div>
     <div style="text-align: center;" class="description">
         <span>Wishing you a day filled with love and joy! 🎉🎂</span>
-        <span>To my forever favorite, Areeb Akhan! 📸 Happy Birthday, love! Six years of capturing beautiful moments together, <br> and you're still the most photogenic part of every memory.<br> Like a perfectly exposed film, you bring light into every dark room of life. <br>May your birthday be as timeless and beautiful as our love story! 🎞️✨</span>
+        <span><br>To my forever favorite, Areeb Akhan! 📸 Happy Birthday, love! Six years of capturing beautiful moments together, <br> and you're still the most photogenic part of every memory.<br> Like a perfectly exposed film, you bring light into every dark room of life. <br>May your birthday be as timeless and beautiful as our love story! 🎞️✨</span>
     </div>
      <!-- Button -->
   <div style="position: absolute; top: 75vh; width: 100%; display: flex; justify-content: center;">
