--- a/index.html
+++ b/index.html
@@ -38,15 +38,15 @@
         <span>E</span>
         <span>B</span>
         <span>A</span>
+        <span>😍</span>
         <span>K</span>
         <span>H</span>
         <span>A</span>
         <span>N</span>
-        <span>😍</span>
         <span>💝</span>
     </div>
     <div style="text-align: center;" class="description">
-        <span>Wishing you a day filled with love and joy! 🎉🎂</span>
+        <span>Wishing you a day filled with love and joy! 🎉🎂<br> </span>
         <span><br>To my forever favorite, Areeb Akhan! 📸 Happy Birthday, love! Six years of capturing beautiful moments together, <br> and you're still the most photogenic part of every memory.<br> Like a perfectly exposed film, you bring light into every dark room of life. <br>May your birthday be as timeless and beautiful as our love story! 🎞️✨</span>
     </div>
      <!-- Button -->
