--- a/index.html
+++ b/index.html
@@ -1,19 +1,16 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta name="title" content="HAPPY BIRTHDAY v3 | Aoudumber Bade">
     <meta name="github" content="https://github.com/Aoudumber-Bade">
-    <title>HAPPY BIRTHDAY v3 | Aoudumber Bade</title>
+    <title>HAPPY BIRTHDAY AREEBA KHAN | BY SAEED</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
-
 </head>
-
-<body style="display: flex; justify-content: center; align-items: center; height: 100vh;">
+<body style="display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; padding: 15px; box-sizing: border-box;">
     <div class="greetings">
         <span>H</span>
         <span>A</span>
@@ -31,7 +28,7 @@
         <span>A</span>
         <span>Y</span>
     </div>
-  <div class="greetings">
+    <div class="greetings">
         <span>A</span>
         <span>R</span>
         <span>E</span>
@@ -45,25 +42,20 @@
         <span>N</span>
         <span>💝</span>
     </div>
-    <div style="text-align: center;" class="description">
+    <div style="text-align: center; max-width: 95%; word-wrap: break-word;" class="description">
         <span>Wishing you a day filled with love and joy! 🎉🎂<br> </span>
         <span><br>To my forever favorite, Areeb Akhan! 📸 Happy Birthday, love! Six years of capturing beautiful moments together, <br> and you're still the most photogenic part of every memory.<br> Like a perfectly exposed film, you bring light into every dark room of life. <br>May your birthday be as timeless and beautiful as our love story! 🎞️✨</span>
     </div>
-     <!-- Button -->
-  <div style="position: absolute; top: 75vh; width: 100%; display: flex; justify-content: center;">
-    <a href="./heartcaputre.html" class="btn">
-      <svg height="24" width="24" fill="#FFFFFF" viewBox="0 0 24 24" data-name="Layer 1" id="Layer_1" class="sparkle">
-        <path
-          d="M10,21.236,6.755,14.745.264,11.5,6.755,8.255,10,1.764l3.245,6.491L19.736,11.5l-6.491,3.245ZM18,21l1.5,3L21,21l3-1.5L21,18l-1.5-3L18,18l-3,1.5ZM19.333,4.667,20.5,7l1.167-2.333L24,3.5,21.667,2.333,20.5,0,19.333,2.333,17,3.5Z">
-        </path>
-      </svg>
-
-      <span class="text">OPEN</span>
-    </a>
-  </div>
-
+    <!-- Button -->
+    <div style="position: relative; margin-top: 20px; width: 100%; display: flex; justify-content: center;">
+        <a href="./heartcaputre.html" class="btn">
+            <svg height="24" width="24" fill="#FFFFFF" viewBox="0 0 24 24" data-name="Layer 1" id="Layer_1" class="sparkle">
+                <path d="M10,21.236,6.755,14.745.264,11.5,6.755,8.255,10,1.764l3.245,6.491L19.736,11.5l-6.491,3.245ZM18,21l1.5,3L21,21l3-1.5L21,18l-1.5-3L18,18l-3,1.5ZM19.333,4.667,20.5,7l1.167-2.333L24,3.5,21.667,2.333,20.5,0,19.333,2.333,17,3.5Z">
+                </path>
+            </svg>
+            <span class="text">OPEN</span>
+        </a>
+    </div>
     <!-- Credits -->
-    
 </body>
-
 </html>
