--- a/index.html
+++ b/index.html
@@ -4,21 +4,21 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <meta name="title" content="HAPPY BIRTHDAY v3 | Aoudumber Bade">
+    <meta name="title" content="HAPPY BIRTHDAY AREEBA| BY SAEED">
     <meta name="github" content="https://github.com/Aoudumber-Bade">
-    <title>HAPPY BIRTHDAY AREEBA KHAN | BY SAEED</title>
+    <title>HAPPY BIRTHDAY v3 | Aoudumber Bade</title>
     <link rel="stylesheet" href="css/style.css">
     <link rel="icon" href="img/flowers.png" type="image/x-icon">
 </head>
 <body style="display: flex; flex-direction: column; justify-content: center; align-items: center; min-height: 100vh; padding: 15px; box-sizing: border-box;">
-    <div class="greetings">
+    <div class="greetings" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 5px; margin: 10px 0;">
         <span>H</span>
         <span>A</span>
         <span>P</span>
         <span>P</span>
         <span>Y</span>
     </div>
-    <div class="greetings">
+    <div class="greetings" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 5px; margin: 10px 0;">
         <span>B</span>
         <span>I</span>
         <span>R</span>
@@ -28,7 +28,7 @@
         <span>A</span>
         <span>Y</span>
     </div>
-    <div class="greetings">
+    <div class="greetings" style="display: flex; flex-wrap: wrap; justify-content: center; gap: 5px; margin: 10px 0;">
         <span>A</span>
         <span>R</span>
         <span>E</span>
