--- a/index.html
+++ b/index.html
@@ -105,15 +105,15 @@
     <!-- Image Slider -->
     <div class="image-slider">
         <div class="slider-track">
-            <div class="slide"><img src="images/1.jpg" alt="Memory 1"></div>
-            <div class="slide"><img src="images/2.jpg" alt="Memory 2"></div>
-            <div class="slide"><img src="images/3.jpg" alt="Memory 3"></div>
-            <div class="slide"><img src="images/4.jpg" alt="Memory 4"></div>
-            <div class="slide"><img src="images/5.jpg" alt="Memory 5"></div>
-            <div class="slide"><img src="images/6.jpg" alt="Memory 6"></div>
-            <div class="slide"><img src="images/7.jpg" alt="Memory 7"></div>
-            <div class="slide"><img src="images/8.jpg" alt="Memory 8"></div>
-            <div class="slide"><img src="images/9.jpg" alt="Memory 9"></div>
+            <div class="slide"><img src="img/1.jpg" alt="Memory 1"></div>
+            <div class="slide"><img src="img/2.jpg" alt="Memory 2"></div>
+            <div class="slide"><img src="img/3.jpg" alt="Memory 3"></div>
+            <div class="slide"><img src="img/4.jpg" alt="Memory 4"></div>
+            <div class="slide"><img src="img/5.jpg" alt="Memory 5"></div>
+            <div class="slide"><img src="img/6.jpg" alt="Memory 6"></div>
+            <div class="slide"><img src="img/7.jpg" alt="Memory 7"></div>
+            <div class="slide"><img src="img/8.jpg" alt="Memory 8"></div>
+            <div class="slide"><img src="img/9.jpg" alt="Memory 9"></div>
         </div>
         <div class="slider-indicators">
             <div class="indicator"></div>
